--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
             android:theme="@style/Base.Theme.AppCompat" />
 
         <service
-            android:name="com.deeplearning.app.service.QiangHongBaoService"
+            android:name="com.deeplearning.app.service.QHBAccessibilityService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
@@ -107,14 +107,6 @@
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
-
-
-        <service
-            android:name="com.deeplearning.app.service.ScreenRecordListenerService"
-            android:enabled="true"
-            android:exported="false" />
-
-
 
     </application>
 
