--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,10 @@
     <uses-permission android:name="android.permission.BROADCAST_PACKAGE_CHANGED" />
     <uses-permission android:name="android.permission.BROADCAST_PACKAGE_INSTALL" />
     <uses-permission android:name="android.permission.BROADCAST_PACKAGE_REPLACED" />
-
-    <permission
-        android:name="com.deeplearning.app.permission.MIPUSH_RECEIVE"
-        android:protectionLevel="signatureOrSystem" />
-
     <uses-permission android:name="com.deeplearning.app.permission.MIPUSH_RECEIVE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
@@ -69,22 +60,44 @@
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name="com.deeplearning.app.activity.QHBAboutMeActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:label="@string/about_title" />
         <activity
             android:name="com.deeplearning.app.activity.QHBNotifySettingsActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
-        <activity
-            android:name="com.deeplearning.app.activity.QHBSettingsActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:label="@string/notify_settings" />
         <activity
             android:name="com.deeplearning.app.activity.QHBWechatSettingsActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:label="@string/wechat_settings" />
         <activity
             android:name="com.deeplearning.app.activity.RecordActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name="com.deeplearning.app.activity.ScreenRecordActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
+        <service
+            android:name="com.deeplearning.app.service.QHBNotificationService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.BaseAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/service_config" />
+        </service>
 
         <service
             android:name="com.deeplearning.app.service.QHBAccessibilityService"
@@ -97,15 +110,120 @@
             </intent-filter>
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/qianghongbao_service_config" />
+                android:resource="@xml/service_config" />
         </service>
 
-        <service android:name="com.deeplearning.app.service.QHBNotificationService"
-                 android:label="@string/app_name"
-                 android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+        <service
+            android:name="com.deeplearning.app.service.SearchHackAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/search"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
-                <action android:name="android.service.notification.NotificationListenerService" />
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
             </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/search"/>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.CleanBackgroundProcessAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/clean"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/clean"/>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.AutoReplyAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/reply"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/reply"/>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.AutoInstallAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/install"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/install"/>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.SelfDefenseAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/defense"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/defense"/>
+        </service>
+
+        <service
+            android:name="com.deeplearning.app.service.AutoReplyService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/auto_reply_accessibility_description"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/auto_reply_service_config" />
+        </service>
+
+        <!--service
+            android:name="com.deeplearning.app.service.BaseAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/base_accessibility_description"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/base_services_config" />
+        </service-->
+
+        <service
+            android:name="com.deeplearning.app.service.AutoInstallService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/auto_install_accessibility_description"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/auto_install_services_config" />
         </service>
 
     </application>
