--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,16 +23,19 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.REORDER_TASKS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:name="com.deeplearning.app.DLApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:allowBackup="true"
         android:supportsRtl="true"
+        android:installLocation="internalOnly"
+        android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.deeplearning.app.activity.MainActivity"
@@ -71,6 +74,13 @@
         <activity
             android:name="com.deeplearning.app.activity.ScreenRecordActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
+        <receiver android:name="com.deeplearning.app.service.BootCompletedBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </receiver>
 
         <service
             android:name="com.deeplearning.app.service.BaseNotificationService"
